# voicecode

./: .gitignore  README.md  config.yaml  pyproject.toml  test_microphone.py
.claude/: settings.local.json
docs/: especificacao_requisitos.md  plano_implementacao.md
orientacoes/: conversa_com_gemini_baseada_reddit.md  prompt_inicial.txt
src/voicecode/: __init__.py  __main__.py  config.py  history.py
src/voicecode/audio/: recorder.py
src/voicecode/hotkeys/: __init__.py  listener.py
src/voicecode/output/: __init__.py  clipboard.py
src/voicecode/processing/: __init__.py  base.py  groq_backend.py  local_backend.py
src/voicecode/transcription/: __init__.py  base.py  groq_backend.py  local_backend.py
src/voicecode/ui/: __init__.py  config_gui.py  sounds.py  tray.py
tests/: __init__.py
